cluster/core/storage/rook-ceph/ingressroute.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-http-ingressroute
#   namespace: traefik
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
#       kind: Rule
#       middlewares:
#         - name: https-redirect-scheme-middleware
#       services:
#         - name: api@internal
#           kind: TraefikService

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-https-ingressroute
#   namespace: traefik
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
#       kind: Rule
#       middlewares:
#         - name: basicauth-middleware
#           namespace: authentication
#         # - name: authelia-middleware
#         #   namespace: authentication
#         - name: secure-headers-middleware
#           namespace: traefik
#       services:
#         - name: api@internal
#           kind: TraefikService
#   tls:
#     secretName: "${SECRET_DOMAIN/./-}-tls"
#     options:
#       name: default-tlsoption
#       namespace: traefik

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-dashboard-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rook.${SECRET_DOMAIN}`) && (PathPrefix(`/ceph-dashboard`)
      kind: Rule
      # middlewares:
        # - name: basicauth-middleware
        #   namespace: authentication
        # - name: authelia-middleware
        #   namespace: authentication
        # - name: secure-headers-middleware
        #   namespace: traefik
        # - name: longhorn-headers-middleware # avoid CORS problem
        #   namespace: longhorn-system
      services:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 8443
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
